@@ -11,6 +11,7 @@
 - [#385] Add 'Open Recent' option in Tape.exe, 'File' dropdown menu.
 
 # Version 0.4.3
+- [#454] Crash: using CRTL+Z while using line tool
 - Fixed broken saving pattern description.
 - Fixed UI bug. Release a dialog size for deploying a formula field.
 - Fixed broken formula when for system locale thousand separator is a space.
